fixes to spacing

--- a/src/styles/breadcrumb.module.css
+++ b/src/styles/breadcrumb.module.css
@@ -1,4 +1,4 @@
-.container{
+.divContainer{
     margin: 5px 0px 5px 10px;
 }
 .container a{
